#73: Refactored table metadata reading with filtered tables